--- a/src/main/java/com/github/thefuckingcode/choerodonplugin/ui/ChoerodonPluginToolWindow.form
+++ b/src/main/java/com/github/thefuckingcode/choerodonplugin/ui/ChoerodonPluginToolWindow.form
@@ -1,33 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.github.thefuckingcode.choerodonplugin.ui.ChoerodonPluginToolWindow">
-  <grid id="27dc6" binding="toolWindowContent" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="toolWindowContent" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="913" height="699"/>
     </constraints>
     <properties/>
     <border type="none"/>
-    <children>
-      <scrollpane id="a9e52" binding="tableScrollPanel">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <grid id="8cd16" binding="tablePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints/>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="97b8c" class="javax.swing.JTable" binding="issueTable">
-                <constraints border-constraint="Center"/>
-                <properties/>
-              </component>
-            </children>
-          </grid>
-        </children>
-      </scrollpane>
-    </children>
+    <children/>
   </grid>
 </form>
+
